# dock-vibe

./: .gitignore  IMPLEMENTATION.md  LICENSE  PRE-FLIGHT.md  QOL-IMPROVEMENTS.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  TEST-STATUS.md  TESTING-E2E.md  TESTING.md  VALIDATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-cleanup.sh  test-setup.sh  vite.config.ts  vitest-test.js
.github/workflows/: build.yml
src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  env.test.ts  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128.ppm  32x32.ppm  icon.icns
src-tauri/src/: lib.rs  main.rs  validation.rs
src-tauri/tests/: integration_test.rs
src/components/: ComposeUpload.css  ComposeUpload.test.tsx  ComposeUpload.tsx  ConfirmModal.css  ConfirmModal.tsx  ContainerDetails.css  ContainerDetailsView.test.tsx  ContainerDetailsView.tsx  ContainerList.css  ContainerList.test.tsx  ContainerList.tsx  ContextMenu.css  ContextMenu.tsx  CreateContainer.css  CreateContainer.test.tsx  CreateContainer.tsx  ImageList.css  ImageList.test.tsx  ImageList.tsx  LogsView.css  LogsView.test.tsx  LogsView.tsx  NetworkList.css  NetworkList.test.tsx  NetworkList.tsx  PullImage.css  PullImage.test.tsx  PullImage.tsx  PullProgress.css  PullProgress.test.tsx  PullProgress.tsx  RegistrySearch.css  RegistrySearch.test.tsx  RegistrySearch.tsx  ResourceDashboard.css  ResourceDashboard.test.tsx  ResourceDashboard.tsx  Settings.css  Settings.tsx  SystemPrune.css  (+15 more)
(+2 files in other folders)
