[package]
name = "dock"
version = "1.0.0"
description = "Modern cross-platform Docker GUI manager"
authors = ["Dock Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
bollard = "0.17"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
regex = "1.10"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
